// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-select should have correct validation status: with-validation-status-error 1`] = `
<ic-select label="IC Select Test" validation-status="error">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-2" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="error">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-2-menu" aria-describedby="ic-select-input-2-validation-text" aria-expanded="false" aria-haspopup="listbox" aria-invalid="true" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-2-menu" class="select-input" id="ic-select-input-2">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-2" message="" status="error"></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-2" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should not have a validation status if disabled: no-validation-status-if-disabled 1`] = `
<ic-select disabled="" label="IC Select Test" validation-status="error">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label disabled="" for="ic-select-input-3" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="disabled">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-3-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="true" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-3-menu" class="select-input" disabled="" id="ic-select-input-3">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-3" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" disabled="" name="ic-select-input-3" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should not render a label when the 'hide-label' prop is supplied: hide-label-set 1`] = `
<ic-select hide-label="" label="IC Select Test">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-component-container>
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-0-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-0-menu" class="select-input" id="ic-select-input-0">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-0" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-0" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should not render validation text if disabled: no-validation-text-if-disabled 1`] = `
<ic-select label="IC Select Test" validation-text="Test validation text">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-6" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container>
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-6-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-6-menu" class="select-input" id="ic-select-input-6">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-6" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-6" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should not render validation text if no validation status has been supplied: no-validation-text-if-no-status 1`] = `
<ic-select label="IC Select Test" validation-text="Test validation text">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-5" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container>
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-5-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-5-menu" class="select-input" id="ic-select-input-5">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-5" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-5" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should render as required: required-searchable 1`] = `
<ic-select label="IC Select Test" required="true" searchable="true">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-7" helpertext="" label="IC Select Test" required=""></ic-input-label>
      <ic-input-component-container>
        <!---->
        <div class="focus-indicator">
          <div class="searchable-select-container">
            <input aria-autocomplete="list" aria-controls="ic-select-input-7-menu" aria-describedby="" aria-expanded="false" aria-invalid="false" aria-label="IC Select Test" aria-required="true" class="select-input" id="ic-select-input-7" placeholder="Select an option" role="combobox">
            <span aria-hidden="true" class="expand-icon">
              svg
            </span>
            <div aria-live="polite" class="searchable-select-results-status" role="status"></div>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-7" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-7" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should render correct validation text: with-validation-text 1`] = `
<ic-select label="IC Select Test" validation-status="error" validation-text="Test validation text">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-4" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="error">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-4-menu" aria-describedby="ic-select-input-4-validation-text" aria-expanded="false" aria-haspopup="listbox" aria-invalid="true" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-4-menu" class="select-input" id="ic-select-input-4">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-4" message="Test validation text" status="error"></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-4" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should render readonly: readonly 1`] = `
<ic-select label="IC Select Test" readonly="true">
  <mock:shadow-root>
    <ic-input-container readonly="">
      <ic-input-label for="ic-select-input-1" helpertext="" label="IC Select Test" readonly=""></ic-input-label>
      <ic-input-component-container class="readonly">
        <!---->
        <div class="focus-indicator">
          <ic-typography>
            <p></p>
          </ic-typography>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root></mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-1" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-1" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should test native select with groups: native-select-with-groups 1`] = `
<ic-select label="IC Select Test">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-12" helpertext="" label="New label"></ic-input-label>
      <ic-input-component-container validationstatus="">
        <select aria-describedby="" aria-invalid="false" aria-label="New label" class="select-option-selected" id="ic-select-input-12">
          <option disabled="" selected="" value="">
            Select an option
          </option>
          <optgroup label="Fancy">
            <option value="Cap">
              Cappuccino
            </option>
            <option value="Flat">
              Flat white
            </option>
          </optgroup>
          <optgroup label="Boring">
            <option value="Fil">
              Filter
            </option>
            <option value="Lat">
              Latte
            </option>
          </optgroup>
        </select>
      </ic-input-component-container>
      <ic-input-validation arialivemode="polite" for="ic-select-input-12" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-12" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should test native select: native-select 1`] = `
<ic-select label="IC Select Test">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-11" helpertext="" label="New label"></ic-input-label>
      <ic-input-component-container validationstatus="">
        <select aria-describedby="" aria-invalid="false" aria-label="New label" class="select-option-selected" id="ic-select-input-11">
          <option disabled="" selected="" value="">
            Select an option
          </option>
          <option value="Test value 1">
            Test label 1
          </option>
          <option value="Test value 2">
            Test label 2
          </option>
          <option value="Test value 3">
            Test label 3
          </option>
        </select>
      </ic-input-component-container>
      <ic-input-validation arialivemode="polite" for="ic-select-input-11" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-11" type="hidden" value="">
</ic-select>
`;

exports[`ic-select should test with clear button: with-clear-button 1`] = `
<ic-select label="IC Select Test" show-clear-button="true" value="test-value">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-8" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container>
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-8-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-8-menu" class="select-input" id="ic-select-input-8">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <div class="divider"></div>
                <span aria-hidden="true" class="expand-icon expand-icon-filled">
                  svg
                </span>
              </div>
            </button>
            <ic-button class="button-size-default button-variant-icon clear-button dark" id="clear-button">
              <mock:shadow-root>
                <ic-tooltip label="Clear selection" placement="bottom" target="ic-button-with-tooltip-clear-button">
                  <button aria-describedby="ic-tooltip-ic-button-with-tooltip-clear-button" aria-label="Clear selection" class="button" id="ic-button-with-tooltip-clear-button" type="button">
                    <slot></slot>
                  </button>
                </ic-tooltip>
              </mock:shadow-root>
              svg
            </ic-button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu>
        <mock:shadow-root>
          <ul aria-activedescendant="ic-select-input-8-menu-test-value" aria-label="IC Select Test" class="menu" id="ic-select-input-8-menu" role="listbox" tabindex="0">
            <li aria-disabled="false" aria-label="Test label 1" class="option" data-label="Test label 1" data-value="Test value 1" id="ic-select-input-8-menu-Test value 1" role="option" tabindex="-1">
              <div class="option-text-container">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 1
                  </p>
                </ic-typography>
              </div>
            </li>
            <li aria-disabled="false" aria-label="Test label 2" class="option" data-label="Test label 2" data-value="Test value 2" id="ic-select-input-8-menu-Test value 2" role="option" tabindex="-1">
              <div class="option-text-container">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 2
                  </p>
                </ic-typography>
              </div>
            </li>
            <li aria-disabled="false" aria-label="Test label 3" class="option" data-label="Test label 3" data-value="Test value 3" id="ic-select-input-8-menu-Test value 3" role="option" tabindex="-1">
              <div class="option-text-container">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 3
                  </p>
                </ic-typography>
              </div>
            </li>
          </ul>
        </mock:shadow-root>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-8" message="" status=""></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-8" type="hidden" value="test-value">
</ic-select>
`;
